--- a/shelf/settings.py.sample
+++ b/shelf/settings.py.sample
@@ -20,7 +20,7 @@ BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
 # See https://docs.djangoproject.com/en/3.0/howto/deployment/checklist/
 
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = '#_e&wl_29#pa1!0-g*t(vx2&c4wsdl)a@p+0jfwe%x)(_c=ynp'
+SECRET_KEY = 'GENERATE A RANDOM SECRET KEY AND REPLACE WITH THIS STRING'
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
